--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,6 @@
 .main-container .footer{
-	padding: 1rem;
+	padding: 3rem 1rem;
+	margin-top: 1rem;
 	text-align: center;
 	height: 100%;
 	width: 100%;
